commit login diseño
agregando logo y colores a login
agregado de componente de titulo

--- a/petwalk_admin/src/scss/_variables.scss
+++ b/petwalk_admin/src/scss/_variables.scss
@@ -23,5 +23,11 @@ $background-grey-light: #e8e8e8;
 $background-grey: #808080;
 $background-grey-dark: #000;
 $background-dark: #000;
+$background-error: #ff00001f;
+$background-success: #84b84c1f; 
+
+$success: #84b84c;
+$error: #f00; 
+
 
 
