--- a/petwalk_admin/src/component/Cards.scss
+++ b/petwalk_admin/src/component/Cards.scss
@@ -11,16 +11,20 @@
         width: 200px;
         height: 200px;
     }
-    
     .target2{
         width: 200px;
         height: 200px;
         margin-left: 30px;
         margin-right: 30px;
     }
-    
     .target3{
         width: 200px;
         height: 200px;
+        
+    }
+    .target4{
+        width: 200px;
+        height: 200px;
+        margin-left: 30px;
     }
 }
