--- a/petwalk_admin/src/pages/ListConsumers.scss
+++ b/petwalk_admin/src/pages/ListConsumers.scss
@@ -4,3 +4,14 @@
 #buttonDocument{
     margin: 3px;
 }
+
+#divButtonSearch{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#buttonSearch{
+    padding-left: 30px;
+    padding-right: 30px;
+}
