--- a/petwalk_admin/src/pages/ListRequest.scss
+++ b/petwalk_admin/src/pages/ListRequest.scss
@@ -1,5 +1,10 @@
 @import '../scss/index.scss';
 
+.icons1{
+    position: absolute;
+    left: 1080px;
+}
+
 .TitleHeader{
     align-items: center;
 }
@@ -7,3 +12,4 @@
 #buttonDocument{
     margin: 3px;
 }
+
