--- a/petwalk_admin/src/component/Cards.scss
+++ b/petwalk_admin/src/component/Cards.scss
@@ -10,21 +10,25 @@
     .target1{ 
         width: 200px;
         height: 200px;
+        border-radius: 10px;
     }
     .target2{
         width: 200px;
         height: 200px;
         margin-left: 30px;
         margin-right: 30px;
+        border-radius: 10px;
     }
     .target3{
         width: 200px;
         height: 200px;
+        border-radius: 10px;
         
     }
     .target4{
         width: 200px;
         height: 200px;
         margin-left: 30px;
+        border-radius: 10px;
     }
 }
