--- a/petwalk_admin/src/scss/index.scss
+++ b/petwalk_admin/src/scss/index.scss
@@ -1,3 +1,17 @@
 @import "./_variables.scss";
 // @import 'bootstrap/dist/css/bootstrap.min.css';
 @import "~bootstrap/scss/bootstrap";
+
+.diseño-tabla{
+    margin-top: 2em;
+    display: flex;
+    justify-content: center;
+    .ant-spin-nested-loading{
+        width: 90%;
+    }
+}
+
+th{
+    background-color: #4630AB !important;
+    color: white !important;
+}
