correcciones de diseño

--- a/petwalk_admin/src/scss/index.scss
+++ b/petwalk_admin/src/scss/index.scss
@@ -3,13 +3,14 @@
 @import "~bootstrap/scss/bootstrap";
 
 .diseño-tabla{
-    margin-top: 2em;
-    display: flex;
-    justify-content: center;
-    .ant-spin-nested-loading{
-        width: 90%;
-    }
+    // margin-top: 2em;
+    // display: flex;
+    // justify-content: center;
+    // .ant-spin-nested-loading{
+    //     width: 90%;
+    // }
 }
+
 
 th{
     background-color: #4630AB !important;
