--- a/petwalk_admin/src/pages/DashboardGeneral.scss
+++ b/petwalk_admin/src/pages/DashboardGeneral.scss
@@ -12,3 +12,8 @@
     padding: 20px;
     gap:20px
 }
+.title-dashboard{
+    display: flex;
+    justify-content: center;
+    // font-family: ;
+}
